# WebApplication

./: .env  README.md  docker-compose.yml
api/: .env  Dockerfile  config.py  main.py  migrate_db.py  origin_db.py  pyproject.toml
api/modules/login/: api.py  models.py  schemas.py  service.py
api/modules/master/: api.py  service.py
api/tests/: login_test.py
web/: Dockerfile  package-lock.json  package.json  vite.config.ts
web/src/: App.vue  main.ts
web/src/assets/: main.scss
web/src/layouts/: Header.vue
web/src/router/: index.ts
web/src/stores/: login.ts
web/src/views/: Login.vue
